Removed base version requirement

--- a/NameGenerator.cabal
+++ b/NameGenerator.cabal
@@ -13,5 +13,5 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     NameGenerator
-  build-depends:       base >=4.6 && <4.7, random, containers
+  build-depends:       base, random, containers
   default-language:    Haskell2010
