--- a/NameGenerator.cabal
+++ b/NameGenerator.cabal
@@ -13,5 +13,5 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     NameGenerator
-  build-depends:       base, random, containers
+  build-depends:       base >=4 && <5, random, containers
   default-language:    Haskell2010
